# jni-min-helper

./: BroadcastRec.java  CHANGELOG.md  Cargo.toml  InvocHdl.java  README.md  android.rs  bindings.rs  build.rs  classes.dex  convert.rs  lib.rs  loader.rs  permission.rs  proxy.rs  receiver.rs
java/: InvocHdl.java  PermActivity.java  classes.dex
