[package]
name = "jni-min-helper"
version = "0.2.7"
authors = ["wuwbobo2021 <wuwbobo@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wuwbobo2021/jni-min-helper"
readme = "README.md"
description = """
Minimal helper for `jni-rs`, supporting dynamic proxies, Android dex
embedding and broadcast receiver. Used for calling Java code from Rust.
"""
keywords = ["java", "android", "proxy", "invocation"]
categories = ["api-bindings"]

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 30

[package.metadata.docs.rs]
features = ["futures"]
default-target = "aarch64-linux-android"
targets = [
    "aarch64-linux-android",
    "i686-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu"
]

[target.'cfg(not(target_os = "android"))'.dependencies]
jni = { version = "0.21.1", features = ["invocation"] }

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
jni = "0.21.1"
ndk-context = "0.1"
futures-core = { version = "0.3", optional = true }
futures-timer = { version = "3.0", optional = true }
atomic-waker = { version = "1.1", optional = true }
futures-lite = { version = "2.5", optional = true }

[build-dependencies]
java-locator = "0.1.8"

[features]
default = []

# Disables `JniProxy` and anything that depends on it (e.g. `BroadcastReceiver`),
# as well as the dex/class building process. Features listed below will be ignored.
no-proxy = []

# Enables `BroadcastWaiter`, which is based on `BroadcastReceiver`.
futures = [
    "dep:futures-core",
    "dep:futures-timer",
    "dep:atomic-waker",
    "dep:futures-lite"
]

[lib]
name = "jni_min_helper"
path = "lib.rs"
