[package]
name = "jni-min-helper"
version = "0.4.0"
authors = ["wuwbobo2021 <wuwbobo@outlook.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wuwbobo2021/jni-min-helper"
readme = "README.md"
description = """
Minimal helper for `jni-rs`, supporting dynamic proxies, Android dex embedding,
permission request and broadcast receiver. Used for calling Java code from Rust.
"""
keywords = ["java", "android", "proxy", "invocation"]
categories = ["api-bindings"]

[package.metadata.docs.rs]
features = ["futures"]
default-target = "aarch64-linux-android"
targets = [
    "aarch64-linux-android",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu"
]

[target.'cfg(not(target_os = "android"))'.dependencies]
jni = { git = "https://github.com/jni-rs/jni-rs", rev = "0a47413", features = ["invocation"] }

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
jni = { git = "https://github.com/jni-rs/jni-rs", rev = "0a47413" }
ndk-context = "0.1"
futures-core = { version = "0.3", optional = true }
futures-timer = { version = "3.0", optional = true }
futures-channel = { version = "0.3", optional = true }
atomic-waker = { version = "1.1", optional = true }
futures-lite = { version = "2.6", optional = true }

[build-dependencies]
android-build = "0.1.2"

[features]
# Enables `BroadcastWaiter` based on `BroadcastReceiver`, and `Future` for `PermissionRequest`.
futures = [
    "dep:futures-core",
    "dep:futures-timer",
    "dep:futures-channel",
    "dep:atomic-waker",
    "dep:futures-lite"
]

[lib]
name = "jni_min_helper"
path = "lib.rs"
